Renamed IFlight to FlightInterface. Also went through code with a finetoothed comb and cleared some nitpicks that aren't big enough of a deal to require a review comment.