@@ -3,7 +3,7 @@ package commandsTest.gameCommandTest;
 import commands.gamecommand.CreateFlightCommand;
 import bookmarks.InterceptorDispatcher;
 import factories.FlightFactory;
-import models.flight.IFlight;
+import models.flight.FlightInterface;
 import models.flight.flighttypes.FlightType;
 import models.map.AirTrafficMap;
 import views.ConsoleLogger;
@@ -23,7 +23,7 @@ class CreateFlightCommandTest {
 
     @Test
     void createFlightSuccessfullyWhenValidTypeAndNumberProvided() {
-        List<IFlight> flights = new ArrayList<>();
+        List<FlightInterface> flights = new ArrayList<>();
         SimulatorView view = Mockito.mock(SimulatorView.class);
         // Provide all required inputs for a successful flight creation.
         when(view.getUserInput()).thenReturn("PRIVATE", "FL123", "100", "Some Agency", "John Doe", "10");
@@ -32,8 +32,7 @@ class CreateFlightCommandTest {
         CreateFlightCommand command = new CreateFlightCommand(flights, view, dispatcher, airTrafficMap);
         command.execute();
         assertFalse(flights.isEmpty());
-        // Use get(0) as ArrayList does not have getFirst()
-        IFlight createdFlight = flights.get(0);
+        FlightInterface createdFlight = flights.getFirst();
         // The decorated flight now returns "Private Flight"
         assertEquals("Private Flight", createdFlight.getType());
         verify(dispatcher).dispatch(contains("FL123"));
@@ -42,8 +41,8 @@ class CreateFlightCommandTest {
 
     @Test
     void displayErrorWhenFlightNumberAlreadyExists() {
-        List<IFlight> flights = new ArrayList<>();
-        IFlight existingFlight = FlightFactory.createFlight(FlightType.PRIVATE, "FL123");
+        List<FlightInterface> flights = new ArrayList<>();
+        FlightInterface existingFlight = FlightFactory.createFlight(FlightType.PRIVATE, "FL123");
         flights.add(existingFlight);
         SimulatorView view = Mockito.mock(SimulatorView.class);
         InterceptorDispatcher dispatcher = Mockito.mock(InterceptorDispatcher.class);
@@ -59,7 +58,7 @@ class CreateFlightCommandTest {
 
     @Test
     void createFlightSuccessfullyWhenFlightNumberIsUnique() {
-        List<IFlight> flights = new ArrayList<>();
+        List<FlightInterface> flights = new ArrayList<>();
         SimulatorView view = Mockito.mock(SimulatorView.class);
         // Provide complete input for a unique flight.
         when(view.getUserInput()).thenReturn("PRIVATE", "FL124", "150", "Some Agency", "John Doe", "12");
@@ -68,7 +67,7 @@ class CreateFlightCommandTest {
         CreateFlightCommand command = new CreateFlightCommand(flights, view, dispatcher, airTrafficMap);
         command.execute();
         assertEquals(1, flights.size());
-        IFlight createdFlight = flights.get(0);
+        FlightInterface createdFlight = flights.getFirst();
         assertEquals("Private Flight", createdFlight.getType());
         assertEquals("FL124", createdFlight.getFlightNumber());
         verify(dispatcher).dispatch(contains("FL124"));
@@ -77,7 +76,7 @@ class CreateFlightCommandTest {
 
     @Test
     void displayErrorWhenInvalidPassengerCountIsProvided() {
-        List<IFlight> flights = new ArrayList<>();
+        List<FlightInterface> flights = new ArrayList<>();
         SimulatorView view = Mockito.mock(SimulatorView.class);
         // Supply an invalid passenger count; later prompts will not be reached.
         when(view.getUserInput()).thenReturn("PRIVATE", "FL125", "invalid_passenger_count");
@@ -95,7 +94,7 @@ class CreateFlightCommandTest {
 
     @Test
     void displayErrorWhenInvalidCrewCountIsProvided() {
-        List<IFlight> flights = new ArrayList<>();
+        List<FlightInterface> flights = new ArrayList<>();
         SimulatorView view = Mockito.mock(SimulatorView.class);
         // Provide complete inputs but with an invalid crew count.
         when(view.getUserInput()).thenReturn("PRIVATE", "FL126", "10", "Some Agency", "John Doe", "invalid_crew_count");
@@ -112,7 +111,7 @@ class CreateFlightCommandTest {
 
     @Test
     void displayErrorWhenInvalidFlightTypeIsProvided() {
-        List<IFlight> flights = new ArrayList<>();
+        List<FlightInterface> flights = new ArrayList<>();
         SimulatorView view = Mockito.mock(SimulatorView.class);
         InterceptorDispatcher dispatcher = Mockito.mock(InterceptorDispatcher.class);
         AirTrafficMap airTrafficMap = Mockito.mock(AirTrafficMap.class);
